# podcast-cutter-ai

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/config/: settings.py
app/core/: pipeline.py  preflight.py
app/pipeline/: context.py  orchestrator.py  stage.py
app/prompts/: clip_detection.py
app/schemas/: clip.py  crop.py  transcript.py
app/services/: chunker.py  clip_detector.py  downloader.py  smart_crop.py  subtitle_service.py  transcriber.py  video_cutter.py  video_downloader.py  video_renderer.py
app/stages/: audio_download.py  content_analysis.py  rendering.py  smart_crop.py  subtitle_generation.py  transcription.py  video_cutting.py  video_download.py
app/utils/: logger.py  validators.py
tests/: test_chunker.py  test_clip_detector.py  test_schemas.py  test_validators.py
