[project]
name = "podcast-cutter-ai"
version = "0.1.0"
description = "Automated viral clip detection from YouTube podcasts and live streams"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.1.0",
    "yt-dlp>=2025.1.15",
    "ollama>=0.4.7",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "static-ffmpeg>=2.5",
    # Smart crop — face detection for vertical 9:16 framing (Step 7).
    # Requires Python 3.8-3.13. Brings opencv as a transitive dependency.
    "mediapipe>=0.10.14",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short -v"
